[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/scripts/camera-menu.gd" type="Script" id=2]
[ext_resource path="res://scenes/scripts/options.gd" type="Script" id=4]
[ext_resource path="res://sprites/Fonts/GravityBold8.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=3]
size = 12
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://sprites/Fonts/GravityBold8.ttf"

[sub_resource type="DynamicFont" id=4]
size = 13
font_data = SubResource( 5 )

[node name="options" type="Node2D"]
pause_mode = 1
script = ExtResource( 4 )

[node name="camera" type="Camera2D" parent="."]
anchor_mode = 0
current = true
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="logo" type="Label" parent="CanvasLayer"]
margin_top = 10.0
margin_right = 160.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 3 )
text = "Opcoes"
align = 1
valign = 1

[node name="creditos" type="Node2D" parent="CanvasLayer"]
position = Vector2( 50, 221 )

[node name="creditos" type="Button" parent="CanvasLayer/creditos"]
margin_left = -30.0
margin_top = -148.0
margin_right = 94.0
margin_bottom = -78.0
rect_scale = Vector2( 1, 0.4 )
flat = true

[node name="Label" type="Label" parent="CanvasLayer/creditos"]
margin_left = -50.0
margin_top = -142.0
margin_right = 112.0
margin_bottom = -126.0
custom_fonts/font = SubResource( 4 )
text = "creditos"
align = 1
valign = 1

[node name="galeria" type="Node2D" parent="CanvasLayer"]
position = Vector2( 33, 240 )

[node name="galeria" type="Button" parent="CanvasLayer/galeria"]
margin_left = -13.0
margin_top = -138.0
margin_right = 111.0
margin_bottom = -63.0
rect_scale = Vector2( 1, 0.4 )
disabled = true
flat = true

[node name="Label" type="Label" parent="CanvasLayer/galeria"]
margin_left = -33.0
margin_top = -130.0
margin_right = 127.0
margin_bottom = -114.0
custom_colors/font_color = Color( 0.623529, 0.623529, 0.623529, 1 )
custom_fonts/font = SubResource( 4 )
text = "Galeria"
align = 1

[node name="notas" type="Node2D" parent="CanvasLayer"]
position = Vector2( 57, 258 )

[node name="notas" type="Button" parent="CanvasLayer/notas"]
margin_left = -37.0
margin_top = -123.0
margin_right = 87.0
margin_bottom = -53.0
rect_scale = Vector2( 1, 0.4 )
flat = true

[node name="Label" type="Label" parent="CanvasLayer/notas"]
margin_left = -57.0
margin_top = -117.0
margin_right = 103.0
margin_bottom = -101.0
custom_fonts/font = SubResource( 4 )
text = "Notas"
align = 1

[node name="scores" type="Node2D" parent="CanvasLayer"]
position = Vector2( 57, 289 )

[node name="scores" type="Button" parent="CanvasLayer/scores"]
margin_left = -37.0
margin_top = -123.0
margin_right = 87.0
margin_bottom = -53.0
rect_scale = Vector2( 1, 0.4 )
flat = true

[node name="Label" type="Label" parent="CanvasLayer/scores"]
margin_left = -57.0
margin_top = -117.0
margin_right = 103.0
margin_bottom = -101.0
custom_fonts/font = SubResource( 4 )
text = "Scores"
align = 1

[node name="exit" type="Node2D" parent="CanvasLayer"]
position = Vector2( 57, 373 )

[node name="exit" type="Button" parent="CanvasLayer/exit"]
margin_left = -16.0
margin_top = -121.0
margin_right = 61.0
margin_bottom = -71.0
rect_scale = Vector2( 1, 0.4 )
flat = true

[node name="Label" type="Label" parent="CanvasLayer/exit"]
margin_left = -57.0
margin_top = -117.0
margin_right = 103.0
margin_bottom = -101.0
custom_fonts/font = SubResource( 4 )
text = "Voltar"
align = 1

[connection signal="pressed" from="CanvasLayer/creditos/creditos" to="." method="_on_creditos_pressed"]
[connection signal="pressed" from="CanvasLayer/galeria/galeria" to="." method="_on_galeria_pressed"]
[connection signal="pressed" from="CanvasLayer/notas/notas" to="." method="_on_notas_pressed"]
[connection signal="pressed" from="CanvasLayer/scores/scores" to="." method="_on_scores_pressed"]
[connection signal="pressed" from="CanvasLayer/exit/exit" to="." method="_on_exit_pressed"]
